--- a/GroupAPI.Models/GroupAPI.Models.csproj
+++ b/GroupAPI.Models/GroupAPI.Models.csproj
@@ -54,6 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LocationCreate.cs" />
+    <Compile Include="LocationDetail.cs" />
+    <Compile Include="LocationEdit.cs" />
+    <Compile Include="LocationListItem.cs" />
     <Compile Include="PetCreate.cs" />
     <Compile Include="PetDetail.cs" />
     <Compile Include="PetEdit.cs" />
