--- a/GroupAPI.Models/GroupAPI.Models.csproj
+++ b/GroupAPI.Models/GroupAPI.Models.csproj
@@ -59,6 +59,10 @@
     <Compile Include="PetEdit.cs" />
     <Compile Include="PetListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WalkerCreate.cs" />
+    <Compile Include="WalkerDetail.cs" />
+    <Compile Include="WalkerEdit.cs" />
+    <Compile Include="WalkerListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
