initial walker service

--- a/GroupAPI.Service/GroupAPI.Service.csproj
+++ b/GroupAPI.Service/GroupAPI.Service.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="PetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WalkerService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
