--- a/GroupAPI.Models/GroupAPI.Models.csproj
+++ b/GroupAPI.Models/GroupAPI.Models.csproj
@@ -54,6 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IndividualWalkServiceCreate.cs" />
+    <Compile Include="IndividualWalkServiceDetail.cs" />
+    <Compile Include="IndividualWalkServiceEdit.cs" />
+    <Compile Include="IndividualWalkServiceListItem.cs" />
     <Compile Include="PetCreate.cs" />
     <Compile Include="PetDetail.cs" />
     <Compile Include="PetEdit.cs" />
