ScheduledWalks Data Models Service added

--- a/GroupAPI.Data/GroupAPI.Data.csproj
+++ b/GroupAPI.Data/GroupAPI.Data.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IndividualWalkService.cs" />
+    <Compile Include="ScheduledWalks.cs" />
     <Compile Include="Walker.cs" />
     <Compile Include="Location.cs" />
     <Compile Include="Pet.cs" />
