--- a/GroupAPI.Service/GroupAPI.Service.csproj
+++ b/GroupAPI.Service/GroupAPI.Service.csproj
@@ -58,6 +58,7 @@
     <Compile Include="LocationService.cs" />
     <Compile Include="PetService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduledWalkService.cs" />
     <Compile Include="WalkerService.cs" />
   </ItemGroup>
   <ItemGroup>
